chart/templates/open-webui/open-webui-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: open-webui
  labels:
    app: open-webui
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
  selector:
    app: open-webui
