chart/templates/open-webui/open-webui-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: open-webui
  labels:
    app: open-webui
spec:
  to:
    kind: Service
    name: open-webui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
